--- a/app/src/main/res/layout/activity_sqldb.xml
+++ b/app/src/main/res/layout/activity_sqldb.xml
@@ -6,14 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Home">
+    tools:context="sparkyd.bloodbankcet.sqldb">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="sql"
-        android:id="@+id/sql"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
