--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,9 +11,10 @@
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
+        android:background="@drawable/mybutton"
         android:layout_height="wrap_content"
         android:text="sql"
         android:id="@+id/sql"
-        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
