--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
+        android:hint="Password"
         android:id="@+id/password"
         android:layout_below="@+id/username"
         android:layout_marginTop="20dp"
