--- a/app/src/main/res/layout/activity_sqldb.xml
+++ b/app/src/main/res/layout/activity_sqldb.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sparkyd.bloodbankcet.sqldb">
+    android:background="@drawable/background"
+    tools:context="moonblade.bloodbankcet.sqldb">
 
 
 
