--- a/app/src/main/res/layout/activity_sqltest.xml
+++ b/app/src/main/res/layout/activity_sqltest.xml
@@ -5,8 +5,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sparkyd.bloodbankcet.sqltest">
+    tools:context="moonblade.bloodbankcet.sqltest">
 
 
     <EditText
