--- a/app/src/main/res/layout/activity_sqlview.xml
+++ b/app/src/main/res/layout/activity_sqlview.xml
@@ -6,11 +6,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sparkyd.bloodbankcet.sqlview">
+    android:background="@drawable/background"
+    tools:context="moonblade.bloodbankcet.sqlview">
+
 
 
 
     <TableLayout
+
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true">
