--- a/app/src/main/res/layout/activity_sqlview.xml
+++ b/app/src/main/res/layout/activity_sqlview.xml
@@ -34,4 +34,19 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp" />
+
+    <TextView
+        android:text="Names"
+        android:layout_gravity="center"
+        android:textSize="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ListView
+        android:layout_width="fill_parent"
+        android:id="@+id/listviewname"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content">
+
+    </ListView>
 </RelativeLayout>
