--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -6,8 +6,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sparkyd.bloodbankcet.blooddb">
+    tools:context="sparkyd.bloodbankcet.ViewBlood">
 
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DATBASE"
+        android:textSize=""
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
