--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -23,6 +23,10 @@
         android:text="Filter By:"
         android:textSize="20sp"/>
 
+
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,9 +35,23 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Blood Group"/>
+            android:text="Blood Group"
+            android:id="@+id/blood"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Branch"
+            android:id="@+id/branch"/>
+    </RadioGroup>
 
-        </RadioGroup>
+    <ExpandableListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ExpList"
+        android:paddingRight="10dp"
+        android:paddingLeft="20dp"
+        android:layout_toRightOf="@+id/choice"
+        />
 
-
+</RelativeLayout>
 </LinearLayout>
