--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="sparkyd.bloodbankcet.settings" >
+    tools:context="moonblade.bloodbankcet.settings" >
 
 </menu>
