--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sparkyd.bloodbankcet.ViewBlood">
+    tools:context="moonblade.bloodbankcet.ViewBlood">
 
 
     <TextView
@@ -20,9 +20,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Filter By:"
-        android:textSize="20sp"/>
+        android:text="Filter By:"/>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,9 +33,22 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Blood Group"/>
+            android:text="Blood Group"
+            android:id="@+id/blood"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Branch"
+            android:id="@+id/branch"/>
+
 
         </RadioGroup>
 
-
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listview"
+            android:layout_toRightOf="@+id/choice">
+            </ListView>
+</RelativeLayout>
 </LinearLayout>
