--- a/app/src/main/res/values/bloodgroups.xml
+++ b/app/src/main/res/values/bloodgroups.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="bloodgroups">
+
+    <string-array name="blood_groups">
         <item>A+</item>
         <item>A-</item>
         <item>B+</item>
