Revert "fuck it"
This reverts commit 8df0e88ff8d012b26b0bfa6c43a443ee21ed8fc1.

--- a/app/src/main/res/values/blood_groups.xml
+++ b/app/src/main/res/values/blood_groups.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string-array name="blood_groups">
+    <string-array name="bloodgroups">
         <item>A+</item>
         <item>A-</item>
         <item>B+</item>
