--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,18 +14,17 @@
         android:layout_width="wrap_content"
         android:background="@drawable/mybutton"
         android:layout_height="wrap_content"
-        android:text="sql"
-        android:id="@+id/sql"
-        android:layout_centerVertical="true"
+        android:text="view"
+        android:id="@+id/viewblood"
         android:layout_centerHorizontal="true" />
+
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:background="@drawable/mybutton"
         android:layout_height="wrap_content"
-        android:text="view"
-        android:id="@+id/viewblood"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="79dp" />
+        android:text="sql"
+        android:id="@+id/sql"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
