--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -20,13 +20,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Filter By:"
-        android:textSize="20sp"/>
+        android:text="Filter By:"/>
 
-
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,16 +40,15 @@
             android:layout_height="wrap_content"
             android:text="Branch"
             android:id="@+id/branch"/>
-    </RadioGroup>
 
-    <ExpandableListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ExpList"
-        android:paddingRight="10dp"
-        android:paddingLeft="20dp"
-        android:layout_toRightOf="@+id/choice"
-        />
 
+        </RadioGroup>
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listview"
+            android:layout_toRightOf="@+id/choice">
+            </ListView>
 </RelativeLayout>
 </LinearLayout>
