--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -50,5 +50,12 @@
             android:id="@+id/listview"
             android:layout_toRightOf="@+id/choice">
             </ListView>
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/choice_branch"
+            android:paddingTop="28dp"
+            android:layout_toRightOf="@+id/choice"/>
 </RelativeLayout>
 </LinearLayout>
