added none option

--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -33,6 +33,11 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/none"
+            android:text="None"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Blood Group"
             android:id="@+id/blood"/>
         <RadioButton
@@ -55,8 +60,16 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/choice_branch"
-            android:paddingTop="28dp"
+            android:paddingTop="10dp"
             android:layout_toRightOf="@+id/choice"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/filter"
+            android:text="Filter"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="80dp"
+            android:layout_below="@+id/choice_branch"/>
 </RelativeLayout>
     <ListView
         android:layout_width="fill_parent"
