--- a/app/src/main/res/layout/listviewlayout.xml
+++ b/app/src/main/res/layout/listviewlayout.xml
@@ -8,29 +8,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:paddingLeft="30dp"
+        android:paddingLeft="70dp"
         android:id="@+id/name"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:paddingLeft="30dp"
-        android:layout_toRightOf="@+id/name"
+        android:paddingRight="70dp"
+        android:layout_alignParentRight="true"
         android:id="@+id/set_name"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Blood Group"
-        android:paddingLeft="30dp"
+        android:paddingLeft="70dp"
         android:layout_below="@+id/name"
         android:id="@+id/bg"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
+        android:layout_below="@+id/name"
         android:layout_alignParentRight="true"
-        android:paddingRight="30dp"
+        android:paddingRight="70dp"
         android:id="@+id/set_bg"/>
 
 </RelativeLayout>
