--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -15,6 +16,7 @@
         android:background="@drawable/mybutton"
         android:layout_height="wrap_content"
         android:text="view"
+        android:layout_margin="10dp"
         android:id="@+id/viewblood"
         android:layout_centerHorizontal="true" />
 
@@ -23,8 +25,19 @@
         android:layout_width="wrap_content"
         android:background="@drawable/mybutton"
         android:layout_height="wrap_content"
+        android:text="add"
+        android:layout_margin="10dp"
+        android:id="@+id/add"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:background="@drawable/mybutton"
+        android:layout_height="wrap_content"
         android:text="sql"
+        android:layout_margin="10dp"
         android:id="@+id/sql"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+</LinearLayout>
