--- a/app/src/main/res/layout/activity_sqltest.xml
+++ b/app/src/main/res/layout/activity_sqltest.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,6 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background"
+    android:orientation="vertical"
+    android:layout_centerHorizontal="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="moonblade.bloodbankcet.sqltest">
 
@@ -16,6 +18,14 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/name"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:ems="10"
+        android:id="@+id/bg"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -34,4 +44,4 @@
         android:id="@+id/view"
         android:layout_below="@+id/add"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+</LinearLayout>
