not list view doesnt work either

--- a/app/src/main/res/layout/activity_sqlview.xml
+++ b/app/src/main/res/layout/activity_sqlview.xml
@@ -9,7 +9,10 @@
     android:background="@drawable/background"
     tools:context="moonblade.bloodbankcet.sqlview">
 
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/info"/>
 <ListView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
