--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -48,14 +48,16 @@
 
 
         </RadioGroup>
-
+<ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_toRightOf="@+id/choice">
         <ListView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listview"
-            android:layout_toRightOf="@+id/choice">
+            android:id="@+id/listview">
             </ListView>
-
+</ScrollView>
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -76,6 +78,4 @@
         android:layout_height="wrap_content"
         android:id="@+id/lvdata"
         android:paddingTop="5dp"></ListView>
-
-    </ListView>
 </LinearLayout>
