--- a/app/src/main/res/layout/dialoglayout.xml
+++ b/app/src/main/res/layout/dialoglayout.xml
@@ -93,12 +93,18 @@
         android:layout_alignStart="@+id/tvdiagmob" />
 
 
-
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="0dp"
+        android:layout_below="@+id/tvdiaghostel"
+        android:id="@+id/seperator"
+        android:background="?android:attr/dividerVertical" />
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvdiaghostel"
+        android:layout_below="@+id/seperator"
         android:measureWithLargestChild="true"
         android:orientation="horizontal"
         android:paddingTop="0dip" >
