--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,30 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/background"
     tools:context=".Home">
 
     <Button
         style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="view"
         android:id="@+id/viewblood"
         android:layout_centerHorizontal="true" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="0dp"
+        android:id="@+id/seperatorview"
          android:background="?android:attr/dividerVertical" />
 
     <Button
         style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="add"
          android:id="@+id/add"
@@ -34,14 +31,15 @@
         android:layout_centerHorizontal="true" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="0dp"
+        android:id="@+id/seperatoradd"
         android:background="?android:attr/dividerVertical" />
 
     <Button
         style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="sql"
         android:id="@+id/sql"
