--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -17,14 +17,20 @@
         android:textSize="25sp"
         android:layout_gravity="center_horizontal"
         android:paddingBottom="15dp"/>
-    <TextView
-        android:layout_width="wrap_content"
+    <Spinner
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Filter By:"/>
+        android:id="@+id/blood_spinner"
+        android:prompt="@string/blood_group_spinner_title"></Spinner>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Filter By:"/>-->
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/filterchoice">
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
