--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -9,14 +9,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="moonblade.bloodbankcet.ViewBlood">
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DATABASE"
         android:textSize="25sp"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:paddingBottom="15dp"/>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:id="@+id/show_filter"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/filter"/>
+</RelativeLayout>
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
