--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -19,19 +19,20 @@
         android:textSize="25sp"
         android:layout_centerHorizontal="true"
         android:paddingBottom="15dp"/>
-    <ImageButton
+    <!--<ImageButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:id="@+id/show_filter"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:src="@drawable/filter"/>-->
+    <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:id="@+id/show_filter"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/filter"/>
-</RelativeLayout>
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/blood_spinner"
+        android:layout_alignParentRight="true"
         android:prompt="@string/blood_group_spinner_title"></Spinner>
+</RelativeLayout>
 
     <ListView
         android:layout_width="fill_parent"
