--- a/app/src/main/res/menu/viewblood_action.xml
+++ b/app/src/main/res/menu/viewblood_action.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/filterwhite"
         android:title="@string/title_activity_view_blood"
         android:showAsAction="ifRoom"/>
+    <item android:id="@+id/blood_spinner2"
+        android:title="@string/dummy_title"
+        android:showAsAction="always"
+        android:actionViewClass="android.widget.Spinner"/>
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
