--- a/app/src/main/res/layout/listviewlayout.xml
+++ b/app/src/main/res/layout/listviewlayout.xml
@@ -39,6 +39,7 @@
         android:id="@+id/green"
         android:src="@drawable/green"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
 
 </RelativeLayout>
