--- a/app/src/main/res/menu/viewblood_action.xml
+++ b/app/src/main/res/menu/viewblood_action.xml
@@ -4,10 +4,10 @@
     <item android:id="@+id/action_filter"
         android:icon="@drawable/filterwhite"
         android:title="@string/title_activity_view_blood"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="ifRoom|collapseActionView"/>
     <item android:id="@+id/blood_spinner2"
         android:title="@string/dummy_title"
-        android:showAsAction="ifRoom"
+        android:showAsAction="ifRoom|collapseActionView"
         android:actionViewClass="android.widget.Spinner"/>
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
