--- a/app/src/main/res/menu/viewblood_action.xml
+++ b/app/src/main/res/menu/viewblood_action.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_filter"
-        android:icon="@drawable/filterwhite"
+    <item android:id="@+id/action_search"
+        android:icon="@drawable/ic_action_search"
         android:title="@string/title_activity_view_blood"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="ifRoom|collapseActionView"/>
     <item android:id="@+id/blood_spinner2"
         android:title="@string/dummy_title"
         android:showAsAction="ifRoom"
