--- a/app/src/main/res/menu/viewblood_action.xml
+++ b/app/src/main/res/menu/viewblood_action.xml
@@ -4,7 +4,8 @@
     <item android:id="@+id/action_search"
         android:icon="@drawable/ic_action_search"
         android:title="@string/title_activity_view_blood"
-        android:showAsAction="ifRoom|collapseActionView"/>
+        android:showAsAction="ifRoom|collapseActionView"
+        android:actionViewClass="android.widget.SearchView"/>
     <item android:id="@+id/blood_spinner2"
         android:title="@string/dummy_title"
         android:showAsAction="ifRoom"
