--- a/app/src/main/res/layout/activity_addmember.xml
+++ b/app/src/main/res/layout/activity_addmember.xml
@@ -50,99 +50,14 @@
                 android:layout_below="@+id/etdbname"
                 android:layout_gravity="center_horizontal" />
 
-
-            <TextView
+            <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Blood Group"
-                android:textSize="15dp"
-                android:id="@+id/tvbg"
-                android:layout_gravity="center_horizontal"
-                android:layout_below="@+id/etdbclass"/>
+                android:id="@+id/add_spinner"
+                android:prompt="@string/choose"
+                android:entries="@array/blood_groups"></Spinner>
 
-
-
-
-
-            <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/rg"
-                android:layout_gravity="center"
-                >
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="A+   "
-                    android:id="@+id/rap"
-                    android:textSize="15dp"
-                    android:layout_weight="50"
-                    />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="A-"
-                    android:id="@+id/ran"
-                    android:textSize="15dp"
-                    />
-
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="B+   "
-                    android:id="@+id/rbp"
-                    android:textSize="15dp"
-                    />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="B-"
-                    android:id="@+id/rbn"
-                    android:textSize="15dp"
-                    />
-
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="AB+"
-                    android:id="@+id/rabp"
-                    android:textSize="15dp"
-                    />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="AB-"
-                    android:id="@+id/rabn"
-                    android:textSize="15dp"
-                    />
-
-
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="O+   "
-                    android:id="@+id/rop"
-                    android:textSize="15dp"
-                    />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="O-"
-                    android:id="@+id/ron"
-                    android:textSize="15dp"
-                    />
-
-
-
-            </RadioGroup>
-
-
-
-            <EditText
+       <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
