--- a/app/src/main/res/layout/listviewlayout.xml
+++ b/app/src/main/res/layout/listviewlayout.xml
@@ -33,13 +33,13 @@
         android:layout_alignParentRight="true"
         android:paddingRight="70dp"
         android:id="@+id/set_bg"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/green"
-        android:src="@drawable/green"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/green"-->
+        <!--android:src="@drawable/green"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
+        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"/>-->
 
 </RelativeLayout>
