--- a/app/src/main/res/layout/activity_addmember.xml
+++ b/app/src/main/res/layout/activity_addmember.xml
@@ -62,7 +62,7 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Last Blood Given On"
+    android:text="@string/donation_date"
     android:layout_gravity="center"/>
             <DatePicker
                 android:layout_width="wrap_content"
