--- a/app/src/main/res/layout/activity_addmember.xml
+++ b/app/src/main/res/layout/activity_addmember.xml
@@ -67,7 +67,7 @@
             <DatePicker
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/datePicker"
+                android:id="@+id/date_Picker"
                 android:calendarViewShown="false"
                 android:layout_gravity="center_horizontal" />
 
