--- a/app/src/main/res/layout/activity_view_blood.xml
+++ b/app/src/main/res/layout/activity_view_blood.xml
@@ -9,11 +9,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="moonblade.bloodbankcet.ViewBlood">
 
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lvdata"
         android:paddingTop="5dp"></ListView>
-
+</ScrollView>
 </LinearLayout>
