--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -54,7 +54,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/action_sign_up"
+        android:text="@string/button_sign_up"
         android:id="@+id/button_sign_up"
         android:visibility="gone"
         android:layout_below="@+id/password"
