--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -15,5 +15,13 @@
         android:title="@string/action_logout"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_export"
+        android:title="@string/action_export"
+        android:orderInCategory="51"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_import"
+        android:title="@string/action_import"
+        android:orderInCategory="50"
+        android:showAsAction="never" />
 
 </menu>
